Fix overflowing map

--- a/source/scss/modules/map.scss
+++ b/source/scss/modules/map.scss
@@ -4,12 +4,14 @@
   @include span(12 of 12);
   clear: both;
   padding: 2em;
+  height: auto;
 }
 #map-image {
   iframe {
     border: none;
     width: 100%;
     height: 100%;
+    max-height: 35em;
   }
   
   @include span(12 of 12);
@@ -19,10 +21,6 @@
 
 }
 #map-text {
-  display: flex;
-  height: 100%;
-  flex-direction: column;
-  align-content: flex-end;
   @include span(12 of 12);
   @include breakpoint($tablet) {
     @include span(6 of 12);
